<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:id="@+id/diet_restriction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="80dp"
        android:text="@string/diet_restriction"/>

    <TextView
        android:id="@+id/serving_restriction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/diet_restriction"
        android:layout_below="@+id/diet_restriction"
        android:layout_marginTop="61dp"
        android:text="@string/serving_restriction" />

    <TextView
        android:id="@+id/prep_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/serving_restriction"
        android:layout_below="@+id/serving_restriction"
        android:layout_marginTop="55dp"
        android:text="@string/prep_time" />

    <Button
        android:id="@+id/find_recipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prep_time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="98dp"
        android:text="@string/search_recipe" />

    <Spinner
        android:id="@+id/diet_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/diet_restriction"
        android:layout_marginStart="31dp"
        android:layout_toEndOf="@+id/serving_restriction" />

    <Spinner
        android:id="@+id/serving_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/diet_spinner"
        android:layout_alignTop="@+id/serving_restriction"
        android:layout_marginStart="11dp" />

    <Spinner
        android:id="@+id/prep_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/serving_spinner"
        android:layout_alignTop="@+id/prep_time" />

</RelativeLayout>