<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <AbsoluteLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/results_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="11dp"
            android:layout_x="3dp"
            android:layout_y="2dp"
            android:text="@string/results_found"
            android:textSize="12dp" />


        <TextView
            android:id="@+id/recipe_title"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageButton"


            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/recipe_image"
            android:layout_toRightOf="@+id/recipe_image"
            android:layout_x="102dp"
            android:layout_y="45dp"
            android:text="@string/recipe_title"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/serving_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/recipe_title"
            android:layout_below="@+id/recipe_title"
            android:layout_marginTop="15dp"
            android:layout_x="104dp"
            android:layout_y="99dp"
            android:text="@string/serving_restriction"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/cooking_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/serving_size"
            android:layout_alignBottom="@+id/serving_size"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/serving_size"
            android:layout_x="226dp"
            android:layout_y="100dp"
            android:text="@string/prep_time"
            android:textSize="12dp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="48dp"
            android:layout_toRightOf="@+id/recipe_title"
            android:layout_x="309dp"
            android:layout_y="34dp"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ImageView
            android:id="@+id/recipe_image"
            android:layout_width="90dp"
            android:layout_height="140dp"
            android:layout_x="0dp"
            android:layout_y="21dp"
            app:srcCompat="@mipmap/ic_launcher" />

</AbsoluteLayout>




</RelativeLayout>